# infraconnectAI

./: -p  .env  .eslintignore  .gitignore  .railwayignore  .vercelignore  Caddyfile  Dockerfile.next  LICENSE  MEMORY.md  README-vla-workbench.md  RELEASE-NOTES-v3.0.md  SOTA_architecture_spec.md  autobbox.py  build_errors.txt  capture_error.js  check_alpha.js  check_error.js  check_error_4000.js  check_setstate.js  check_zustand.js  convert_assets.py  copy_original.py  docker-compose.isaac.yml  docker-compose.kafka.yml  docker-compose.yml  ecosystem.config.js  eslint-errors.json  eslint.config.mjs  find_loops.js  fix_bulk_ts.py  fix_never.py  fix_text_bg.py  fix_ui.py  fix_ui_2.py  illuminate_text.py  make_ico.py  make_transparent.js  next.config.ts  package-lock.json  (+18 more)
agent-ctx/: 1-2-backend-developer.md  7-8-frontend-developer.md
db/: custom.db
demo-environment/: docker-compose.yml  init.sql  simulate-live-data.sh
docs/: ARCHITECTURE_V2_RUST_GO.md  CAPX_RESEARCH_PLAN.md  CUSTOMER-DEMO-SCRIPT.md  INFRACONNECT_SPEC.md  MEMDEVOS-X_SPEC.md  READY-FOR-PRODUCTION-CHECKLIST.md  competitive-positioning-vla-workbench.md  customer-onboarding-playbook.md  customer-success-dashboard-template.md  demo-video-script-vla-workbench.md  executive-one-pager-vla-workbench.md  objection-handling-vla-workbench.md  performance-optimization-isaac-lab.md  pilot-program-agreement-vla-workbench.md  pricing-tiers-vla-workbench.md  roi-calculator-vla-workbench.md  sales-deck-vla-workbench.md  vla-security-checklist.md  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+689 files in other folders)
